<resources>
    <string name="app_name">Image Pixelated</string>
    <string name="select_image">Select Image</string>
    <string name="okey">OK</string>
    <string name="height_pixel">Numbers of pixels in height:</string>
    <string name="width_pixel">Numbers of pixels in width:</string>
    <string name="image_that_user_choose">image that user choose</string>
    <string name="info">Info</string>
    <string name="options">Options</string>
    <string name="generate">GENERATE</string>
</resources>